--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Ibrahim Olanrewaju < ibrahimolanrewaju2@gmail.com>
+Patrick Njoroge <patricknjoroge092@gmail.com)
