--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
+Ezra Nobrega    <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
-Ibrahim Olanrewaju < ibrahimolanrewaju2@gmail.com>
-Patrick Njoroge <patricknjoroge092@gmail.com)
+Ibrahin Olanrewaju <ibrahimolanrewaju2@gmsil.com>
+Patrick Njoroge <patricknjoroge092@gmail.com>
